Section 3.2.1: Enable persons-list-web project to make use of jpa-model
- Section 3.2.1 "Enable persons-list-web Application Project to
  make use of jpa-model Project by means of Maven" steps were executed

- Additionally (compared to what is described in the tutorial):
    changed: .gitignore in jpa-model 
             (exclude generated files in "/target")
    added:   .gitignore in web project
             (exclude generated files in "/build", "/target" and
             "/WebContent/WEB-INF/lib")

--- a/e2e-nwcloud-app-orig/e2e-nwcloud-app-persons-list-web-orig/WebContent/WEB-INF/web.xml
+++ b/e2e-nwcloud-app-orig/e2e-nwcloud-app-persons-list-web-orig/WebContent/WEB-INF/web.xml
@@ -31,6 +31,15 @@
   </context-param>
   <!-- END: DEV MODE -->
 
+  <!-- This option enables proxying of resources from a remote location (in the cloud) -->
+  <context-param>
+    <param-name>com.sap.ui5.resource.REMOTE_LOCATION</param-name>
+    <param-value>https://sapui5.netweaver.ondemand.com</param-value>
+  </context-param>
+  <resource-ref>
+    <res-ref-name>jdbc/DefaultDB</res-ref-name>
+    <res-type>javax.sql.DataSource</res-type>
+  </resource-ref>
 
   <!-- ============================================================== -->
   <!-- Cache Control Filter to prevent caching of any resource        -->
