Section 4.1.1: Configuration and Implementation of the OData Service
- Steps of section 4.1.1 were executed

--- a/e2e-nwcloud-app-orig/e2e-nwcloud-app-persons-list-web-orig/pom.xml
+++ b/e2e-nwcloud-app-orig/e2e-nwcloud-app-persons-list-web-orig/pom.xml
@@ -107,6 +107,13 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- odata4j -->
+		<dependency>
+			<groupId>org.odata4j</groupId>
+			<artifactId>odata4j-cxf</artifactId>
+			<version>0.6.0</version>
+		</dependency>
+
 		<dependency>
 			<groupId>com.sap.netweaver.cloud.sample</groupId>
 			<artifactId>e2e-nwcloud-app-jpa-model-orig</artifactId>
