--- a/e2e-nwcloud-app-orig/e2e-nwcloud-app-persons-list-web-orig/WebContent/WEB-INF/web.xml
+++ b/e2e-nwcloud-app-orig/e2e-nwcloud-app-persons-list-web-orig/WebContent/WEB-INF/web.xml
@@ -71,5 +71,22 @@
   <servlet-mapping>
     <servlet-name>PersonsJpaPersistenceServlet</servlet-name>
     <url-pattern>/PersonsJpaPersistenceServlet</url-pattern>
+  </servlet-mapping> 
+  <servlet>
+    <servlet-name>ODataServlet</servlet-name>
+    <servlet-class>org.apache.cxf.jaxrs.servlet.CXFNonSpringJaxrsServlet</servlet-class>
+    <init-param>
+      <param-name>javax.ws.rs.Application</param-name>
+      <param-value>com.sap.netweaver.cloud.odata.service.JpaApplication</param-value>
+    </init-param>
+    <init-param>
+      <param-name>odata4j.producerfactory</param-name>
+      <param-value>com.sap.netweaver.cloud.odata.service.JpaProducerFactory</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ODataServlet</servlet-name>
+    <url-pattern>/jpa.svc/*</url-pattern>
   </servlet-mapping>
 </web-app>
