Appendix A2-1: Automated Integration Testing (Servlets)
- Steps of Appendix A2-1 were executed

--- a/e2e-nwcloud-app-orig/e2e-nwcloud-app-persons-list-web-orig/.classpath
+++ b/e2e-nwcloud-app-orig/e2e-nwcloud-app-persons-list-web-orig/.classpath
@@ -21,7 +21,7 @@
 			<attribute name="owner.project.facets" value="jst.web"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" output="bin/classes" path="test">
+	<classpathentry including="**/*.java" kind="src" output="bin/classes" path="test">
 		<attributes>
 			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
